# ecdk-lint

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflow/: ci.yml
.github/workflows/: ci.yml  release.yml
ecdklint/: __init__.py  __main__.py  cli.py  config.py  decoder.py  linter.py  parser.py
ecdklint/aws_constants/: __init__.py  regions.py
ecdklint/conf/: default.yaml  relaxed.yaml  test.yaml
ecdklint/rules/: __init__.py  dummy.py  json5_file_extension_deprecated.py  parameters_missing.py  region_invalid.py  region_mismatch_stack_tags.py  region_missing.py  region_stackname_mismatch.py  stack_class_missing.py  stack_module_missing.py  stackname_doesnt_match_module_and_class.py  stackname_too_long.py
tests/: __init__.py  common.py  test_ecdklint_rules.py
tests/test_files/: euc1-parameters-missing-alb-alb.json  region-mismatch-stack-tags.json  stackname-doesnt-match-module-and-class.json
